# simplicity-unchained-web-demo

./: .env.local.example  .gitignore  .gitlab-ci.yml  DEPLOYMENT.md  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
app/: layout.tsx  page.tsx
app/api/proxy/compile/: route.ts
app/api/proxy/convert/: route.ts
app/api/proxy/create-psbt/: route.ts
app/api/proxy/create-pset/: route.ts
app/api/proxy/finalize/: route.ts
app/api/proxy/finalize-psbt/: route.ts
app/api/proxy/generate/: route.ts
app/api/proxy/sighash-psbt/: route.ts
components/: BitcoinScript.tsx  FaucetIcon.tsx  Header.tsx  InfoMenu.tsx  Logs.tsx  Notification.tsx  PresetDropdown.tsx  SendTransaction.tsx  SimplicityProgram.tsx  WarningModal.tsx
config/: api.config.ts
contexts/: AppContext.tsx
public/presets/bitcoin_script/: 2-of-2-multisig.bs
public/presets/simplicity/: check_opcode.simf  escrow_with_delay.simf  hodl_vault.simf  last_will.simf  non_interactive_fee_bump.simf  non_interactive_fee_bump.wit  p2ms.simf  sig_verify_with_pubkey_from_script.simf  sig_verify_with_pubkey_from_script.wit  transfer_with_timeout.simf
services/: proxyApi.ts
simplicity-lib/: Cargo.toml
simplicity-lib/pkg/: package.json  simplicity_lib.d.ts  simplicity_lib.js  simplicity_lib_bg.js  simplicity_lib_bg.wasm  simplicity_lib_bg.wasm.d.ts
simplicity-lib/src/: compiler.rs  converter.rs  create_psbt.rs  create_pset.rs  finalize.rs  finalize_psbt.rs  lib.rs  sighash.rs  sighash_psbt.rs
types/: simf.d.ts
utils/: bitcoinScriptHighlighter.tsx  syntaxHighlighter.tsx
(+7 files in other folders)
