[package]
name = "simplicity-lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "simplicity_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
anyhow = "1.0"
elements = { version = "0.26.1", default-features = false, features = ["serde"] }
hex = "0.4.3"
base64 = "0.21"
simplicityhl = { git = "https://github.com/ivanlele/SimplicityHL.git", rev = "7cf13638c6062c0fce2fe3ed0656a24f58769d71" }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
